# libxmp

./: CMakeLists.txt
lite/: CMakeLists.txt.cmake
